infra/k8s/istio/auth.vs.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-service
spec:
  hosts:
  - "auth.juddbaguio.dev"
  gateways:
  - grpc-gateway
  http:
  - route:
    - destination:
        host: auth-service
        subset: v1
        port:
          number: 3000
        
---
# See more at https://istio.io/docs/reference/config/networking/destination-rule/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-dr
spec:
  host: auth-service
  subsets:
  - name: v1
    labels:
      version: v1
