infra/k8s/istio/hello.vs.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-service
spec:
  hosts:
  - "hello.juddbaguio.dev"
  gateways:
  - grpc-gateway
  http:
  - route:
    - destination:
        host: hello-service
        subset: v1
        port:
          number: 80

---

# See more at https://istio.io/docs/reference/config/networking/destination-rule/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-dr
spec:
  host: hello-service
  subsets:
  - name: v1
    labels:
      version: v1
